force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Breach_happens_at__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Breach_happens_at__c</fullName>
    <formula>IF(
  AND(   
    NOT(ISBLANK(Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c)), 
    NOT(ISBLANK(Flowdometer__Step_Goal__c )),
    NOT(ISBLANK(TEXT(Flowdometer__Step_Goal__r.Flowdometer__Goal_Measured_In_units__c))) 
  ), 
  CASE(TEXT(Flowdometer__Step_Goal__r.Flowdometer__Goal_Measured_In_units__c),
    &quot;Days&quot;, (Flowdometer__Field_Value_Initial_Timestamp__c + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c),
    &quot;Hours&quot;, (Flowdometer__Field_Value_Initial_Timestamp__c + (Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c/24)),
    &quot;Weekdays&quot;, 
    DATETIMEVALUE(CASE( 
      MOD(Flowdometer__Start_Date__c - DATE( 1900, 1, 7 ), 7 ),
      3, Flowdometer__Start_Date__c + 2 + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c,
      4, Flowdometer__Start_Date__c + 2 + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c,
      5, Flowdometer__Start_Date__c + 2 + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c,
      6, Flowdometer__Start_Date__c + 1 + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c,
      Flowdometer__Start_Date__c + Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c
    )),
    null
  ),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the goal, when this stage will be breached if not competed by this date/time</inlineHelpText>
    <label>Breach Happens At</label>
    <type>DateTime</type>
</CustomField>