force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Created_by_Me__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me?</label>
    <type>Checkbox</type>
</CustomField>