force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Ending_Timestamp_or_NOW__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Ending_Timestamp_or_NOW__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Flowdometer__Field_Value_Ending_Timestamp__c )),
  Flowdometer__Field_Value_Ending_Timestamp__c,
  NOW()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>Ending Timestamp or NOW</label>
    <type>DateTime</type>
</CustomField>