force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Field_Value_Ending__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Field_Value_Ending__c</fullName>
    <label>Step After This</label>
    <length>255</length>
    <type>Text</type>
</CustomField>