force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Field_Value_Ending_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Field_Value_Ending_Timestamp__c</fullName>
    <label>Step Ended At</label>
    <type>DateTime</type>
</CustomField>