force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Final_Handle_Time_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Final_Handle_Time_Weekdays__c</fullName>
    <description>Note this field is rounded up to full days</description>
    <inlineHelpText>Note this field is rounded up to full days</inlineHelpText>
    <label>Final Handle Time (weekdays)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>