force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Flow__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Flow__c</fullName>
    <label>Flow</label>
    <referenceTo>Flowdometer__Flow__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>