force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Flow_Goal_ID__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Flow_Goal_ID__c</fullName>
    <description>Used by Process Builder: Assign Step Goal to Steps with matching Flow Goal</description>
    <formula>CASESAFEID(Flowdometer__Flow__r.Flowdometer__Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID of this Step&apos;s Flow&apos;s Goal.</inlineHelpText>
    <label>Flow Goal ID</label>
    <type>Text</type>
</CustomField>