force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Goal_Breached__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Goal_Breached__c</fullName>
    <formula>Flowdometer__Handle_Time_vs_Goal__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to flag when something spends more time in a stage than the Goal</inlineHelpText>
    <label>Goal Breached</label>
    <type>Checkbox</type>
</CustomField>