force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Handle_Time_Hours_in_this_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_Hours_in_this_Step__c</fullName>
    <formula>Flowdometer__Step_Handle_Time__c *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Hours in this Step)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>