force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Handle_Time_over_Weekend_Days__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_over_Weekend_Days__c</fullName>
    <description>Note that this field is imprecise - it is just the total time (a number of days with decimal points) minus the weekdays, which are rounded up to the whole day. It is useful for adjusting time calculations to weekdays.</description>
    <formula>MIN(0,(Flowdometer__Step_Handle_Time__c -  Flowdometer__Handle_Time_Weekdays__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Note that this field is imprecise - it is just the total time (a number of days with decimal points) minus the weekdays, which are rounded up to the whole day. It is useful for adjusting time calculations to weekdays.</inlineHelpText>
    <label>Handle Time (over Weekend Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>