force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Handle_Time_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_vs_Goal__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c)),
    NOT(ISBLANK(Flowdometer__Step_Handle_Time__c)),
    NOT(Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c = 0),
    NOT(ISBLANK(TEXT(Flowdometer__Step_Goal__r.Flowdometer__Goal_Measured_In_units__c)))
  ),   
  CASE(TEXT(Flowdometer__Step_Goal__r.Flowdometer__Goal_Measured_In_units__c),
    &quot;Hours&quot;, (Flowdometer__Step_Handle_Time__c * 24),
    &quot;Days&quot;, Flowdometer__Step_Handle_Time__c,
    &quot;Weekdays&quot;, Flowdometer__Handle_Time_Weekdays__c,
    null
    )/Flowdometer__Step_Goal__r.Flowdometer__Goal_Field_Change_Handle_Time_Hrs__c
  ,null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time vs Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>