force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Handle_Time_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Handle_Time_Weekdays__c</fullName>
    <description>Note that this formula rounds up to whole days</description>
    <formula>IF( AND (Flowdometer__Terminal_Stage__c, ISBLANK( Flowdometer__Next_Step__c )) ,
null,
(5 * ( FLOOR( ( DATEVALUE( Flowdometer__Ending_Timestamp_or_NOW__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(Flowdometer__Ending_Timestamp_or_NOW__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( Flowdometer__Initial_Timestamp_or_CREATED__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(Flowdometer__Initial_Timestamp_or_CREATED__c) - DATE( 1900, 1, 8), 7 ) ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Note that this formula rounds up to whole days</inlineHelpText>
    <label>Handle Time (Weekdays in this Step)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>