force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Initial_Timestamp_or_CREATED__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Initial_Timestamp_or_CREATED__c</fullName>
    <formula>IF(
NOT(ISBLANK( Flowdometer__Field_Value_Initial_Timestamp__c  )),
Flowdometer__Field_Value_Initial_Timestamp__c,
CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in formula fields for handle time</inlineHelpText>
    <label>Initial Timestamp or CREATED</label>
    <type>DateTime</type>
</CustomField>