force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Last_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Step Object that preceded this one</inlineHelpText>
    <label>Last Step</label>
    <referenceTo>Flowdometer__Step__c</referenceTo>
    <relationshipLabel>Steps (Next Step)</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>