force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Step</label>
    <referenceTo>Flowdometer__Step__c</referenceTo>
    <relationshipLabel>Steps (Last Step)</relationshipLabel>
    <relationshipName>Steps1</relationshipName>
    <type>Lookup</type>
</CustomField>