force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Next_Step_vs_Goal_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Next_Step_vs_Goal_Next_Step__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Flowdometer__Step_Goal__r.Flowdometer__Field_Value_Ending__c)),
  IF(Flowdometer__Step_Goal__r.Flowdometer__Field_Value_Ending__c = Flowdometer__Field_Value_Ending__c,
    &quot;Matched goal&quot;,
    &quot;Deviated from goal&quot;
  ),
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Describes whether stages were followed in the order prescribed by the Goal</inlineHelpText>
    <label>Next Step vs Goal Next Step</label>
    <type>Text</type>
</CustomField>