force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Plan_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Plan_Next_Steps__c</fullName>
    <inlineHelpText>How you intend to get to the next field change. What are the blockers? Why might you not get there?</inlineHelpText>
    <label>Plan/Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>