force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Sequence__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>