force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Sequence_and_Initial_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Sequence_and_Initial_Field_Value__c</fullName>
    <formula>TEXT(Flowdometer__Sequence__c) &amp; &quot; &quot;&amp; Flowdometer__Field_Value_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Order and Value</label>
    <type>Text</type>
</CustomField>