force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Start_Date__c</fullName>
    <description>Used in calculation for Breach Happens At</description>
    <formula>DATEVALUE(Flowdometer__Field_Value_Initial_Timestamp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Started Date</label>
    <type>Date</type>
</CustomField>