force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Step_Goal__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Step_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Goal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be of &quot;Step Goal&quot; Record Type</errorMessage>
        <filterItems>
            <field>Flowdometer__Step__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Goal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Flowdometer__Step__c</referenceTo>
    <relationshipLabel>Steps vs this Goal</relationshipLabel>
    <relationshipName>Steps3</relationshipName>
    <type>Lookup</type>
</CustomField>