force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Step_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Step_Handle_Time__c</fullName>
    <formula>IF( AND (Flowdometer__Terminal_Stage__c, ISBLANK( Flowdometer__Next_Step__c )) ,
null,
IF(NOT(ISBLANK(Flowdometer__Field_Value_Ending_Timestamp__c )),
	Flowdometer__Field_Value_Ending_Timestamp__c - Flowdometer__Field_Value_Initial_Timestamp__c,
	IF(NOT(ISBLANK(Flowdometer__Field_Value_Initial_Timestamp__c)),
		NOW() - Flowdometer__Field_Value_Initial_Timestamp__c,
		NOW() - CreatedDate
	)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time (Days in this Step)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>