force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Step_is_currently_active__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Step_is_currently_active__c</fullName>
    <formula>IF(
  AND(
    NOT(Flowdometer__isGoal__c),
    NOT(Flowdometer__Terminal_Stage__c),
    ISBLANK(Flowdometer__Next_Step__c)
  ),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This flag identifies the steps your team is currently working through.</inlineHelpText>
    <label>Step Is Currently Active?</label>
    <type>Checkbox</type>
</CustomField>