force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Terminal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Terminal_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Step?</label>
    <type>Checkbox</type>
</CustomField>