force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Time_since_breach_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Time_since_breach_in_hrs__c</fullName>
    <formula>IF(
	AND(
		NOT(Flowdometer__Terminal_Stage__c),
		NOT(Flowdometer__isGoal__c)
	),
	MAX(
		IF(
			NOT(ISBLANK(Flowdometer__Breach_happens_at__c)),
			IF(
				NOT(ISBLANK(Flowdometer__Field_Value_Ending_Timestamp__c)),
				Flowdometer__Field_Value_Ending_Timestamp__c - Flowdometer__Breach_happens_at__c,
				NOW()-Flowdometer__Breach_happens_at__c
			),
			null
		),
		0
	),
	null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since breach in hours. Stops when the next Step is reached</inlineHelpText>
    <label>Time Since Breach (in days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>