force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Time_until_breach_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Time_until_breach_in_hrs__c</fullName>
    <formula>IF(
	AND(
		NOT(Flowdometer__Terminal_Stage__c),
		NOT(Flowdometer__isGoal__c)
	),
	MAX(
		IF(
			AND(NOT(ISBLANK(Flowdometer__Breach_happens_at__c)), Flowdometer__Step_is_currently_active__c ),
			Flowdometer__Breach_happens_at__c-NOW(),
			null
		),
		0
	),
	null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time remaining until the goal for completing this Step is surpassed</inlineHelpText>
    <label>Time Until Breach (in days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>