force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Tracked_Field_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Field_Name_c__c</fullName>
    <formula>Flowdometer__Flow__r.Flowdometer__Tracked_Field_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Field Name</label>
    <type>Text</type>
</CustomField>