force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Tracked_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Object_Link__c</fullName>
    <formula>Flowdometer__Flow__r.Flowdometer__Tracked_Object_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Link</label>
    <type>Text</type>
</CustomField>