force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Tracked_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Tracked_Object_Type__c</fullName>
    <formula>Flowdometer__Flow__r.Flowdometer__Tracked_Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracked Object Type</label>
    <type>Text</type>
</CustomField>