force-app/main/default/objects/Flowdometer__Step__c/fields/Flowdometer__Type__c.field-meta.xml
<CustomField>
    <fullName>Flowdometer__Type__c</fullName>
    <formula>Flowdometer__Flow__r.Flowdometer__Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to split different types of processes handled within the same object. If your process was held in an Onboarding object, you might have a Customer and Partner type of process, for example.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>