force-app/main/default/objects/Flowdometer__Step__c/recordTypes/Flowdometer__Goal.recordType-meta.xml
<RecordType>
    <fullName>Flowdometer__Goal</fullName>
    <active>true</active>
    <label>Goal</label>
</RecordType>