force-app/main/default/objects/Flowdometer__Step__c/listViews/Flowdometer__All.listView-meta.xml
<ListView>
    <fullName>Flowdometer__All</fullName>
    <columns>NAME</columns>
    <columns>Flowdometer__Tracked_Object_Type__c</columns>
    <columns>Flowdometer__Field_Value_Initial__c</columns>
    <columns>Flowdometer__isGoal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flowdometer__isGoal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>