force-app/main/default/objects/Flowdometer__Step__c/listViews/Flowdometer__My_Next_Steps.listView-meta.xml
<ListView>
    <fullName>Flowdometer__My_Next_Steps</fullName>
    <columns>NAME</columns>
    <columns>Flowdometer__Tracked_Object_Link__c</columns>
    <columns>Flowdometer__Sequence_and_Initial_Field_Value__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Next Steps</label>
</ListView>